manifests/openvidu/coturn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: coturn
  labels:
    io.openvidu.service: coturn
  name: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      io.openvidu.service: coturn
  strategy: {}
  template:
    metadata:
      annotations:
        app: conturn
      labels:
        io.openvidu.service: coturn
    spec:
      serviceAccount: openvidu 
      serviceAccountName: openvidu
      containers:
        - args:
            - --log-file=stdout
            - --listening-port=3478
            - --external-ip=${TURNIP}
            - --listening-ip=0.0.0.0
            - --no-tls
            - --no-dtls
            - --fingerprint
            - --lt-cred-mech
            - --min-port=57001
            - --max-port=57011
            - --realm=video.$BASE_DOMAIN
            - --user=${OPENVIDU_USERNAME}:${OPENVIDU_SERVER_SECRET}
            - --verbose
          image: openvidu/openvidu-coturn:6.0.0
          name: coturn
          ports:
            - containerPort: 3478
              name: udp-3478
              protocol: UDP 
            - containerPort: 57001
              name: udp-57001
              protocol: UDP 
            - containerPort: 57002
              name: udp-57002
              protocol: UDP 
            - containerPort: 57003
              name: udp-57003
              protocol: UDP 
            - containerPort: 57004
              name: udp-57004
              protocol: UDP 
            - containerPort: 57005
              name: udp-57005
              protocol: UDP 
            - containerPort: 57006
              name: udp-57006
              protocol: UDP 
            - containerPort: 57007
              name: udp-57007
              protocol: UDP 
            - containerPort: 57008
              name: udp-57008
              protocol: UDP 
            - containerPort: 57009
              name: udp-57009
              protocol: UDP 
            - containerPort: 57010
              name: udp-57010
              protocol: UDP 
            - containerPort: 57011
              name: udp-57011
              protocol: UDP 
      restartPolicy: Always
