manifests/openvidu/coturn-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: coturn
  labels:
    io.openvidu.service: coturn
  name: coturn
spec:
  type: LoadBalancer 
  ports:
    - name: udp-3478
      port: 3478
      targetPort: udp-3478
      protocol: UDP
    - name: udp-57001
      port: 57001
      protocol: UDP
      targetPort: 57001
    - name: udp-57002
      port: 57002
      protocol: UDP
      targetPort: 57002
    # 必要なポートの範囲を定義する
    # ...
  selector:
    io.openvidu.service: coturn
