manifests/openvidu/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: redis
  creationTimestamp: null
  labels:
    io.openvidu.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.openvidu.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        app: redis
      labels:
        io.openvidu.service: redis
    spec:
      serviceAccountName: openvidu
      containers:
        - env:
            - name: REDIS_PASSWORD
              value: ${OPENVIDU_SERVER_SECRET} 
            - name: REDIS_BINDING
              value: 0.0.0.0
          image: openvidu/openvidu-redis:4.0.0
          name: redis
          ports:
            - containerPort: 6379
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: redis
  labels:
    io.openvidu.service: redis
  name: redis
spec:
  type: ClusterIP
  ports:
    - name: "redis"
      port: 6379
      targetPort: 6379
  selector:
    io.openvidu.service: redis
