manifests/openvidu/loopback-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    io.openvidu.service: loopback
  name: loopback
  namespace: openvidu
spec:
  rules:
  - host: test.${BASE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loopback
            port:
              number: 3000
  tls:
  - hosts:
    - test.${BASE_DOMAIN}
    secretName: tls-secret
