manifests/openvidu/openvidu-server-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    io.openvidu.service: openvidu-server
  name: openvidu-server
  namespace: openvidu
spec:
  rules:
  - host: video.${BASE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: openvidu-server
            port:
              number: 5443
  tls:
  - hosts:
    - video.${BASE_DOMAIN}
    secretName: tls-secret
